--- a/views/goals.ejs
+++ b/views/goals.ejs
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row mb-4">
     <div class="col-md-12">
-      <div class="card shadow">
+      <div class="card-goal shadow">
         <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
           <h3 class="mb-0">Financial Goals</h3>
           <a href="/goals/add" class="btn btn-light">Create New Goal</a>
