--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,8 +2,8 @@
 
 <div class="row justify-content-center">
     <div class="col-md-6">
-        <div class="card shadow">
-            <div class="card-header bg-primary text-white">
+        <div class="card-login shadow">
+            <div class="card-header  text-white">
                 <h3 class="card-title mb-0">Login to Your Account</h3>
             </div>
             <div class="card-body">
@@ -38,9 +38,6 @@
                     <button type="submit" class="btn btn-primary w-100">Login</button>
                 </form>
                 
-                <div class="text-center mt-3">
-                    <a href="/forgot-password">Forgot your password?</a>
-                </div>
                 
                 <hr>
                 
