--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,11 +14,11 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header class="bg-dark text-white py-3">
+    <header class="text-white py-3 navbar-custom">
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
                 <a href="/" class="text-white text-decoration-none">
-                    <h1 class="h4 m-0">My Website</h1>
+                    <h1 class="h4 m-0 nav-heading">FlowFin</h1>
                 </a>
                 <nav>
                     <ul class="nav">
