--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -31,7 +31,7 @@
                 Date().toLocaleDateString() %></span>
           </div>
           <div class="card-body"> <!-- All-Time Summary -->
-            <h5 class="card-title"> <i class="bi bi-clock-history"></i> All-Time Summary </h5>
+            <h5 class="card-title-all"> <i class="bi bi-clock-history"></i> All-Time Summary </h5>
             <div class="row mb-4">
               <div class="col-md-4 mb-3">
                 <div class="card bg-success text-white">
@@ -68,7 +68,7 @@
 
             
             <!-- Current Month Summary -->
-            <h5 class="card-title mt-4">
+            <h5 class="card-title-monthly mt-4">
               <i class="bi bi-calendar-month"></i>
               <%= currentMonthName %>
                 <%= currentYear %> Summary
